--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -12,10 +12,6 @@ on:
           inventory: 'Update inventory'
           deploymentManifest: 'Update deploymentManifest'
 
-  push:
-    paths:
-      - 'prod/extraVars/*'
-
 jobs:
   update_and_merge:
     runs-on: ubuntu-latest
@@ -31,7 +27,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: 'new_branch'
+          branch: 'test_branch'
 
       - name: Checkout Repository
         uses: actions/checkout@v3
