--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Create Branch
         uses: peterjgrainger/action-create-branch@v2.2.0
         with:
-          branch: test_branch
+          branch: new_branch
         env:
           GITHUB_TOKEN: ${{ secrets.AN_TEST_TOKEN }}
 
