--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -17,16 +17,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: main
+          path: job_repo
 
-      - name: Create Branch
+      - name: create branch
         uses: peterjgrainger/action-create-branch@v2.2.0
-        with:
-          branch: new_branch
         env:
-          GITHUB_TOKEN: ${{ secrets.WORK_TEST_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: 'new_branch'
 
       - name: Checkout Repository
         uses: actions/checkout@v3
