--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -38,8 +38,11 @@ jobs:
       - name: Create Directories
         run: |
           # mkdir -p job_repo/prod/extraVars
-          mkdir -p job_repo/prod/inventory 
+          mkdir -p prod/inventory 
           # mkdir -p job_repo/prod/deploymentManifest
+          git add inventory
+          git commit -m "Create new directory"
+          git push origin HEAD:main
 
       - name: path
         run: |
