--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -37,10 +37,10 @@ jobs:
 
       - name: Create Directories
         run: |
-          # mkdir -p job_repo/prod/extraVars
-          mkdir -p home/runner/work/yaml-template/prod/inventory
-          touch home/runner/work/yaml-template/prod/anand.json
           touch prod/aaanand.json
+  
+          # mkdir -p job_repo/prod/extraVars
+          # mkdir -p home/runner/work/yaml-template/prod/inventory
           # mkdir -p job_repo/prod/deploymentManifest
 
       - name: path
