--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Create Directories
         run: |
-          # cd prod/
-          # - mkdir -p extraVars/readme.txt
+          cd /home/runner/work/yaml-template/yaml-template/prod
+          mkdir -p extraVars/readme.txt
           # mkdir -p prod/extraVars/
           # mkdir -p home/runner/work/yaml-template/prod/inventory
           # mkdir -p job_repo/prod/deploymentManifest
