--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -11,6 +11,10 @@ on:
           extraVars: 'Update extraVars'
           inventory: 'Update inventory'
           deploymentManifest: 'Update deploymentManifest'
+  push:
+    paths:
+      - 'prod/*'
+      - 'non-prod/*'
 
 jobs:
   update_and_merge:
