--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -43,9 +43,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mkdir -p job_repo/prod/extraVars; touch foo.txt
-          mkdir -p job_repo/prod/inventory; touch foo.txt
-          mkdir -p job_repo/prod/deploymentManifest; touch foo.txt
+          mkdir -p job_repo/prod/extraVars; touch .gitkeep
+          mkdir -p job_repo/prod/inventory; touch .gitkeep
+          mkdir -p job_repo/prod/deploymentManifest; touch .gitkeep
 
       - name: path
         run: |
