--- a/.github/workflows/copy-code-2-prod.yaml
+++ b/.github/workflows/copy-code-2-prod.yaml
@@ -46,7 +46,7 @@ jobs:
           cd ./job_repo
           wbranch="`git branch`"
           printf "Current branch is ->"
-          printf $wbranch
+          printf "$wbranch"
 
       - name: Create prod/ directories if not exist
         env:
